# FeedSummarizer

./: .env.sample  .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: deploy.yml  lambda_deploy.yml  lint.yml
src/FeedSummarizer/: lambda_function.py
src/feed_summarizer/: consts.py  lambda_function.py  parser.py  requirements.txt
tests/: test_fetch_feed.py  test_filter_feed_entries.py  test_get_last_run_time.py  test_last_run_time.py  test_post_to_slack.py
