[project]
name = "feedsummarizer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ikura1", email = "ikura.lab@gmail.com" }
]
dependencies = [
    "feedparser>=6.0.11",
    "openai>=1.23.6",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "boto3>=1.34.93",
    "extractcontent3>=0.0.2",
    "pypdf>=4.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "pre-commit>=3.3.3",
    "flake8-isort>=6.0.0",
    "flake8>=5.0.4",
    "bandit>=1.7.5",
    "pytest>=8.2.0",
    "moto>=5.0.5",
    "responses>=0.25.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.bandit]
exclude_dirs = ["tests/"]
